Fix spacing, clean up css

--- a/style.css
+++ b/style.css
@@ -139,8 +139,6 @@ p {
     font-weight: bold;
     font-family: "Jost";
     font-size: 84px;
-    border: inset;
-    border-width: 10px;
 }
 
 .btn {
